# Todo_app_Django

./: pyproject.toml
todoapp/: config.ini  db.sqlite3
todoapp/infoboard/: urls.py
todoapp/infoboard/mongodb/: connect.py
todoapp/infoboard/templates/infoboard/: base.html
todoapp/todo/: forms.py  models.py  urls.py  views.py
todoapp/todo/migrations/: 0001_initial.py
todoapp/todo/templates/todo/: base.html  create.html  delete.html  list.html  update.html
todoapp/todoapp/: celery.py  settings.py  urls.py
